# CrabEngine

./: .gitattributes  .gitignore  .gitmodules  Application.cpp  Application.h  ApplicationLayer.h  CMakeLists.txt  CrabEngine.cmake  GLTFSceneParser.cpp  GLTFSceneParser.h  Material.cpp  Material.h  Model.cpp  Node.h  NodeMeshInstance3D.cpp  README.md  ResourceManager.cpp  ResourceManager.h  Transform.h  implementations.cpp  json.hpp  main.cpp
cmake/: AddDotnetSupport.cmake  CopyIfExists.cmake  CrabEngineHelpers.cmake  PatchMinimumVersion.cmake
imgui/backends/: imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
resources/: FunnyScene.json  Level1.glb  NewStandardMaterial.res  NewStandardMaterial.res.importSettings  Suzanne.glb  TestScene.json  cube.obj.importSettings  cylinder.obj.importSettings  default_standard_material.wgsl  default_standard_material.wgsl.importSettings  dumbTestShader.slang  flintlock.glb  fourareen.obj.importSettings  fourareen2K_albedo.jpg.importSettings  fourareen2K_albedo.png.importSettings  fourareen2K_normals.png.importSettings  greg.glb  id_pass.wgsl  id_pass.wgsl.importSettings  mammoth.obj.importSettings  null_texture_black.png.importSettings  null_texture_white.png.importSettings  plane.obj.importSettings  pyramid.obj.importSettings  scene_01.glb  shader.wgsl  sphere.obj.importSettings  standard_material.wgsl  standard_material.wgsl.importSettings  standard_material_2.wgsl  standard_material_2.wgsl.importSettings  standard_test.wgsl.importSettings  texture.jpg.importSettings  uniform_definitions.wgsl  uniform_definitions.wgsl.importSettings
resources/Compute/: clear_texture.wsl
resources/Shaders/: attributes.slang  collision_debug_shader.slang  default_shader.slang  dumbTestShader.slang  standard_shader.slang  standard_vertex.slang  text_shader.slang  vertex.slang
resources/Textures/: T_DefaultResourceThumbnail.png.importSettings  T_FolderThumbnail.png.importSettings  T_PlayButton.png.importSettings  T_StopButton.png.importSettings  cobblestone_floor_08_diff_2k.jpg.importSettings  cobblestone_floor_08_nor_gl_2k.png.importSettings
script/CrabEngine/: Binding.cs  CrabEngine.csproj  Input.cs  Node.cs  Node3D.cs  Object.cs  PropertyAccessor.cs  Resource.cs  ScriptEngine.cs  ScriptHost.cs  Types.cs
script/Generators/: Generators.csproj  NativeBindingGenerator.cs
src/: Application.cpp  Application.cppm  Application.h  ApplicationLayer.cpp  CrabEngineAPI.h  CrabTypes.cppm  CrabTypes.h  GLTFSceneParser.cpp  GLTFSceneParser.cppm  GLTFSceneParser.h  IDrawable.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Node3D.cpp  Node3D.h  NodeMeshInstance3D.cpp  NodeMeshInstance3D.h  ResourceManager.cpp  ResourceManager.h  Transform.cpp  Transform.cppm  Transform.h  implementations.cpp  moduleTest.cppm
src/Compute/: Compute_ClearTexture.cppm
src/Core/: ClassDB.cpp  ClassDB.cppm  ClassDB.h  Input.cppm  Object.cpp  Object.cppm  Object.h  SceneTree.cpp  SceneTree.cppm  SceneTree.h  UID.cpp  UID.cppm  UID.h  Variant.cppm  Variant.h
src/ECS/: Components.h  RenderModule.h  Systems.h  WindowModule.cpp  WindowModule.h
src/ExternalModules/: JoltConversions.cppm  PlatformFolders.cppm  esfw.cppm  filesystem.cppm  fmt.cppm  glm.cppm  jolt.cppm  json.cppm  rocket.cppm  string.cppm  string_id.cpp  string_id.cppm  vfspp.cppm
src/Gfx/: MeshVertex.cppm  MeshVertex.h  ShaderObject.cppm  Vertex.cpp  Vertex.cppm  Vertex.h  wgpu.cppm
src/Gfx/Materials/: StandardMaterial.cpp  StandardMaterial.cppm  StandardMaterial.h
src/Nodes/: Node.cpp  Node.cppm  Node.h  Node3D.cpp  Node3D.cppm  Node3D.h  NodeCamera3D.cpp  NodeCamera3D.cppm  NodeCamera3D.h  NodeEnvironment.cppm  NodeImGUIContextWindow.cpp  NodeImGUIContextWindow.cppm  NodeImGUIContextWindow.h  NodeMeshInstance3D.cpp  NodeMeshInstance3D.cppm  NodeMeshInstance3D.h  NodeSceneInstance.cppm  NodeWindow.cpp  NodeWindow.cppm  NodeWindow.h
src/Physics/: Physics.cppm  PhysicsBody.cppm  PhysicsLayers.cppm  PhysicsListeners.cppm  PhysicsWorld.cpp  PhysicsWorld.cppm
src/Renderer/: Camera.cppm  Camera.h  DrawCommand.cpp  DrawCommand.cppm  DrawCommand.h  DynamicOffsetUniformBuffer.cpp  DynamicOffsetUniformBuffer.cppm  DynamicOffsetUniformBuffer.h  DynamicUniformBuffer.cpp  DynamicUniformBuffer.cppm  DynamicUniformBuffer.h  IDPassMaterial.cpp  IDPassMaterial.cppm  IDPassRenderer.cpp  IDPassRenderer.cppm  Material.cpp  Material.cppm  Material.h  MaterialHelpers.h  PipelineCache.cpp  PipelineCache.h  RenderVisitor.cpp  RenderVisitor.cppm  RenderVisitor.h  Renderer.cpp  Renderer.cppm  Renderer.h  UniformBuffer.cpp  UniformBuffer.cppm  UniformBuffer.h  UniformDefinitions.cppm  UniformDefinitions.h
src/Resource/: ArrayMeshResource.cpp  ArrayMeshResource.cppm  ArrayMeshResource.h  ImageTextureResource.cpp  ImageTextureResource.cppm  ImageTextureResource.h  Mesh.cpp  Mesh.cppm  Mesh.h  OBJMeshResource.cpp  OBJMeshResource.cppm  OBJMeshResource.h  Resource.cpp  Resource.cppm  Resource.h  ResourceDB.cpp  ResourceDB.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.cpp  ResourceManager.cppm  ResourceManager.h  ResourceRef.cpp  ResourceRef.cppm  RuntimeTextureResource.cpp  RuntimeTextureResource.cppm  RuntimeTextureResource.h  SceneResource.cpp  SceneResource.cppm  ShaderFileResource.cpp  ShaderFileResource.cppm  TextureResource.cpp  TextureResource.cppm  TextureResource.h
src/Script/: ScriptEngine.cpp  ScriptEngine.cppm  ScriptInstance.cpp  ScriptInstance.cppm
src/Utility/: Assert.cppm  AutoRegistrationObjects.cpp  AutoRegistrationObjects.cppm  ClassType.cppm  Filesystem.cpp  Filesystem.cppm  JsonConversions.cppm  JsonConversions.h  MaterialProperties.cppm  MathUtils.cpp  MathUtils.cppm  MathUtils.h  ObjectRef.cppm  ObservableDtor.cppm  ObservableDtor.h  Property.cpp  Property.h  PropertySerializer.cpp  PropertySerializer.cppm  PropertySerializer.h  Reflection.cpp  Reflection.cppm  Reflection.h  ReflectionConcepts.cppm  ReflectionMacros.h  SceneSerializer.cpp  SceneSerializer.cppm  SceneSerializer.h  ShaderCompiler.cpp  ShaderCompiler.cppm  ShaderCompilerTypes.cppm  ShaderParser.cpp  ShaderParser.cppm  WeakRef.cppm  WeakRef.h
(+21 files in other folders)
